Switch to single quotes

--- a/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
+++ b/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
@@ -114,7 +114,7 @@
       }
 
       (function () {
-        document.addEventListener("DOMContentLoaded", _ => {
+        document.addEventListener('DOMContentLoaded', _ => {
           document.getElementById('s3_success_action_redirect').value = window.location.href;
 
           const copy_button = document.getElementById('copy_url');
