Improve key decoding/encoding for S3 uploaader

--- a/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
+++ b/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
@@ -128,7 +128,7 @@
 
             const params = new URLSearchParams(window.location.search);
             const u = document.getElementById('public_url');
-            u.innerText = `${u.innerText}${params.get('key')}`;
+            u.innerText = `${u.innerText}${encodeURI(params.get('key'))}`;
           }
 
           const file_selector = document.getElementById('s3_file');
