Improve handling of multiple uploads

--- a/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
+++ b/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
@@ -114,8 +114,9 @@
       }
 
       (function () {
-        document.addEventListener("DOMContentLoaded", _ => {
-          document.getElementById('s3_success_action_redirect').value = window.location.href;
+        document.addEventListener('DOMContentLoaded', _ => {
+          const l = window.location;
+          document.getElementById('s3_success_action_redirect').value = `${l.protocol}//${l.host}${l.pathname}`;
 
           const copy_button = document.getElementById('copy_url');
           copy_button.addEventListener('click', ev => {
