--- a/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
+++ b/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
@@ -115,7 +115,8 @@
 
       (function () {
         document.addEventListener('DOMContentLoaded', _ => {
-          document.getElementById('s3_success_action_redirect').value = window.location.href;
+          const l = window.location;
+          document.getElementById('s3_success_action_redirect').value = `${l.protocol}//${l.host}${l.pathname}`;
 
           const copy_button = document.getElementById('copy_url');
           copy_button.addEventListener('click', ev => {
