--- a/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
+++ b/etc/serverless-s3-upload/lambdas/StaticWebsiteFunction/index.html
@@ -129,7 +129,7 @@
 
             const params = new URLSearchParams(window.location.search);
             const u = document.getElementById('public_url');
-            u.innerText = `${u.innerText}${encodeURIComponent(params.get('key'))}`;
+            u.innerText = `${u.innerText}${encodeURI(params.get('key'))}`;
           }
 
           const file_selector = document.getElementById('s3_file');
